# soccertime

./: .dockerignore  .env.example  .env.production.local.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  GEMINI.md  Makefile  README.md  TODO.md  compose.production.local.yaml  compose.production.yaml  compose.yaml  manage.py  nginx.conf  pyproject.toml  requirements.txt
.antigravitycli/: 13631200-5af6-47ee-bb97-b931805149cd.json
soccertime/: admin.py  apps.py  asgi.py  filters.py  models.py  settings.py  urls.py  views.py  wsgi.py
soccertime/fixtures/: favorites.json  initial_data.json
soccertime/migrations/: 0001_initial.py  0002_alter_competition_name_alter_race_name_and_more.py  0003_channellink_source.py  0004_alter_channellink_link_and_more.py  0005_alter_favorite_options_favorite_order_and_more.py  0006_alter_channellink_quality.py  0007_channel_logo_alter_channellink_category_and_more.py  0008_remove_channel_logo.py  0009_simpleevent.py  0010_alter_event_options_channellink_date_added.py  0011_alter_channellink_date_added.py  0012_flag_alter_team_crest.py  0013_competition_flag.py  0014_channellink_enabled.py  0015_channel_links.py  0016_migrate_channel_links.py  0017_remove_channellink_channel.py  0018_alter_channel_options_alter_channellink_options_and_more.py  0019_alter_channellink_link_alter_channellink_source.py  0020_alter_channellink_link.py  0021_alter_channellink_options_channellink_date_updated.py  0022_alter_channellink_options_alter_channellink_link.py  0023_event_last_updated_at.py  0024_alter_competition_name_alter_event_date.py  0025_event_event_type.py  (+4 more)
templates/: base.html
(+37 files in other folders)
